polished comments across the files, updated documents and rspec
